# minion-factory

./: .gitignore  CLAUDE.md  LICENSE  README.md  REQUIREMENTS-IDEAS.md  REQUIREMENTS.md  pyproject.toml
crews/: ateam.yaml  ff1.yaml  ff7.yaml  gpu-devteam.yaml  idsoftware.yaml  minions.yaml  scouts.yaml  tmnt.yaml  voltron-lions.yaml  voltron-pilots.yaml
docs/: auth.md  cli-reference.md  comms.md  crews.md  daemon.md  missions.md  protocol-auditor.md  protocol-builder.md  protocol-coder.md  protocol-common.md  protocol-lead.md  protocol-oracle.md  protocol-planner.md  protocol-recon.md  providers.md  tasks.md
docs/contracts/: boot-sequence.json  (+5 more)
missions/: bd-research.yaml  bugfix.yaml  code-audit.yaml  competitive-analysis.yaml  dependency-upgrade.yaml  documentation.yaml  incident-response.yaml  migration.yaml  new-feature.yaml  prototype.yaml  security-review.yaml
scripts/: install.sh
task-flows/: _agent-classes.yaml  _base.yaml  chore.yaml  investigation.yaml  requirement-lite.yaml  requirement.yaml
tests/: test_agent_name_template.py  test_backlog.py  test_cli.py  test_contracts.py  test_dag_smoke.py  test_entrypoint.py  test_flow_type.py  test_get_agent_prompt.py  test_imports.py  test_lite_flow.py  test_multi_agent_smoke.py  test_register_agent_db.py  test_register_crew.py  test_req_decompose_inline.py  test_requirements.py  test_skip_stage.py  test_spawn_prompt.py  test_spawn_prompt_format.py  test_task_done.py  test_task_result.py  test_task_spawn_cli.py  test_warroom.py
ui/: package-lock.json  package.json  server.js  vite.config.ts
(+189 files in other folders)
